<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CommentsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/content_background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/content_vertical_margin"
        android:paddingLeft="@dimen/content_horizontal_margin"
        android:paddingRight="@dimen/content_vertical_margin"
        android:paddingTop="@dimen/content_horizontal_margin" >

        <TextView
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments" />

        <EditText
            android:id="@+id/textComments"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_comments_here"
            android:inputType="textMultiLine|textCapSentences"
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSendComments"
        style="@style/ButtonPositive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send_comments" />

</LinearLayout>